--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
     name: Deploy
     needs: [test]
     runs-on: ubuntu-latest
-    if: ${{ github.ref=='refs/heads/master' && github.event_name!='pull_request' }}
+    if: ${{ github.ref=='refs/heads/main' && github.event_name!='pull_request' }}
 
     steps:
       - uses: actions/checkout@v2
