--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,26 +13,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.7
-      - name: Set Poetry cache (Linux)
-        uses: actions/cache@v2
-        if: startsWith(runner.os, 'Linux')
+          python-version: "3.10"
+      - name: Set Poetry cache
+        uses: actions/cache@v3
+        id: poetry-cache
         with:
           path: ~/.cache/pypoetry/virtualenvs
-          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-poetry-
+          key: poetry-${{ hashFiles('**/poetry.lock') }}
       - name: Upgrade Pip
-        run: python -m pip install -U pip
+        run: python -m pip install --upgrade pip
       - name: Install Poetry
         run: python -m pip install poetry
       - name: Install dependencies
         run: |
-          poetry run pip install -U pip
+          poetry run pip install --upgrade pip
           poetry install
       - name: Run tests
         run: poetry run pytest
@@ -40,23 +38,28 @@ jobs:
 
   deploy:
     name: Deploy
+    environment: Deployment
     needs: [test]
     runs-on: ubuntu-latest
     if: ${{ github.ref=='refs/heads/main' && github.event_name!='pull_request' }}
 
+    permissions:
+      contents: write
+      id-token: write
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Setup Python
-        uses: actions/setup-python@v2
+      - uses: actions/checkout@v3
         with:
-          python-version: 3.7
+          token: ${{ secrets.GH_TOKEN }}
+      - name: Setup Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.8"
       - name: Check release
         id: check_release
         run: |
           python -m pip install pip --upgrade
-          pip install poetry
-          pip install githubrelease
-          pip install autopub
+          python -m pip install --pre --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ autopub[github]
           echo "##[set-output name=release;]$(autopub check)"
       - name: Publish
         if: ${{ steps.check_release.outputs.release=='' }}
@@ -64,9 +67,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          git remote set-url origin https://$GITHUB_TOKEN@github.com/${{ github.repository }}
           autopub prepare
-          poetry build
           autopub commit
+          poetry build
           autopub githubrelease
           poetry publish -u __token__ -p $PYPI_PASSWORD
