--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Check release
         id: check_release
         run: |
-          python -m pip install pip --upgrade
+          python -m pip install poetry
           python -m pip install --pre --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ autopub[github]
           echo "##[set-output name=release;]$(autopub check)"
       - name: Publish
