--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,9 +3,12 @@ name: build
 on: [push, pull_request]
 
 env:
-    # color output for Pytest
-    PYTEST_ADDOPTS: "--color=yes"
-    PY_COLORS: 1
+  # color output for Pytest
+  PYTEST_ADDOPTS: "--color=yes"
+  PY_COLORS: 1
+
+permissions:
+  contents: read
 
 jobs:
   test:
@@ -35,7 +38,6 @@ jobs:
       - name: Run tests
         run: poetry run pytest
 
-
   deploy:
     name: Deploy
     environment: Deployment
@@ -49,8 +51,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GH_TOKEN }}
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
@@ -64,7 +64,7 @@ jobs:
       - name: Publish
         if: ${{ steps.check_release.outputs.release=='' }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
           autopub prepare
