--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,7 @@ jobs:
     permissions:
       contents: write
       id-token: write
+      packages: write
 
     steps:
       - uses: actions/checkout@v3
@@ -61,17 +62,6 @@ jobs:
           python -m pip install poetry
           python -m pip install --pre --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ autopub[github]
           echo "##[set-output name=release;]$(autopub check)"
-      - name: publish with cURL
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          curl -v -L \
-           -X POST \
-           -H "Accept: application/vnd.github+json" \
-           -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-           -H "X-GitHub-Api-Version: 2022-11-28" \
-           https://api.github.com/repos/${{ github.repository }}/releases \
-           -d '{"tag_name":"v1.0.${{ github.run_number }}","target_commitish":"main","name":"v1.0.${{ github.run_number }}","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
 
       - name: Publish
         if: ${{ steps.check_release.outputs.release=='' }}
@@ -83,4 +73,4 @@ jobs:
           autopub commit
           poetry build
           autopub githubrelease
-          poetry publish -u __token__ -p $PYPI_PASSWORD
+          poetry publish -u __token__ -p "$PYPI_PASSWORD"
