--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,7 +78,7 @@ jobs:
       - name: Publish
         if: ${{ steps.check_release.outputs.release=='' }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
           autopub prepare
