--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -81,7 +81,7 @@ jobs:
           limit-access-to-actor: true
           limit-access-to-users: offbyone
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          PAT_GITHUB_TOKEN: ${{ secrets.GH_PAT }}
           REAL_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
 
