--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,15 +75,15 @@ jobs:
            https://api.github.com/repos/${{ github.repository }}/releases \
             -d '{"tag_name":"v1.0.${{ github.run_number }}","target_commitish":"main","name":"v1.0.${{ github.run_number }}","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
 
-      - name: yo ssh me
-        uses: lhotari/action-upterm@v1
-        with:
-          limit-access-to-actor: true
-          limit-access-to-users: offbyone
-        env:
-          PAT_GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-          REAL_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      # - name: yo ssh me
+      #   uses: lhotari/action-upterm@v1
+      #   with:
+      #     limit-access-to-actor: true
+      #     limit-access-to-users: offbyone
+      #   env:
+      #     PAT_GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+      #     REAL_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
 
       - name: Publish
         if: ${{ steps.check_release.outputs.release=='' }}
